...
                    android:backgroundTint="@color/button_purple"
                    android:text="@string/edit_button_text"
                    android:textColor="@android:color/white"
                    app:cornerRadius="999dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeleteMood"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/button_purple"
...
